fix: letter spacing doesnt support percentage value

--- a/src/index.css
+++ b/src/index.css
@@ -7,36 +7,36 @@
 
     --text-paragraph: 16px;
     --text-paragraph--line-height: 24px;
-    --text-paragraph--letter-spacing: 0;
+    --text-paragraph--letter-spacing: 0px;
 
     --text-h6: 16px;
     --text-h6--font-weight: 700;
     --text-h6--line-height: 150%;
-    --text-h6--letter-spacing: 0;
+    --text-h6--letter-spacing: 0px;
 
     --text-h5: 24px;
     --text-h5--font-weight: 700;
-    --text-h5--letter-spacing: -1%;
+    --text-h5--letter-spacing: 0px;
 
     --text-h4: 32px;
     --text-h4--font-weight: 700;
     --text-h4--line-height: 44px;
-    --text-h4--letter-spacing: -1%;
+    --text-h4--letter-spacing: 0px;
 
     --text-h3: 40px;
     --text-h3--font-weight: 700;
     --text-h3--line-height: 56px;
-    --text-h3--letter-spacing: -1%;
+    --text-h3--letter-spacing: 0px;
 
     --text-h2: 48px;
     --text-h2--font-weight: 700;
     --text-h2--line-height: 64px;
-    --text-h2--letter-spacing: -1%;
+    --text-h2--letter-spacing: 0px;
 
     --text-h1: 64px;
     --text-h1--font-weight: 700;
     --text-h1--line-height: 82px;
-    --text-h1--letter-spacing: -1%;
+    --text-h1--letter-spacing: 0px;
 
     --text-label-1: 24px;
     --text-label-1--line-height: 32px;
